# AdventOfCode

./: .env  .pre-commit-config.yaml  __init__.py  load_exercise.py  main.py  pyproject.toml  requirements-dev.txt
2015/day1/: day1.md  main.py
2015/day10/: day10.md  main.py
2015/day11/: day11.md  main.py
2015/day12/: day12.md  main.py
2015/day13/: day13.md  main.py
2015/day14/: day14.md  main.py
2015/day15/: day15.md  main.py
2015/day16/: day16.md  main.py
2015/day17/: day17.md  main.py
2015/day18/: day18.md  main.py
2015/day19/: day19.md  main.py
2015/day2/: day2.md  main.py
2015/day20/: day20.md  main.py
2015/day21/: day21.md  main.py
2015/day22/: day22.md  main.py
2015/day23/: day23.md  main.py
2015/day24/: day24.md  main.py
2015/day25/: day25.md  main.py
2015/day3/: day3.md  main.py
2015/day4/: day4.md  main.py
2015/day5/: day5.md  main.py
2015/day6/: day6.md  main.py
2015/day7/: day7.md  main.py
2015/day8/: day8.md  main.py
2015/day9/: day9.md  main.py
2016/day1/: day1.md  main.py
2016/day10/: day10.md  main.py
2016/day11/: day11.md  main.py
2016/day12/: day12.md  main.py
2016/day13/: day13.md  main.py
2016/day14/: day14.md  main.py
2016/day15/: day15.md  main.py
2016/day16/: day16.md  main.py
2016/day17/: day17.md  main.py
2016/day18/: day18.md  main.py
2016/day19/: day19.md  main.py
2016/day2/: day2.md  main.py
2016/day20/: day20.md  main.py
2016/day21/: day21.md  main.py
2016/day22/: day22.md  main.py
2016/day23/: day23.md  main.py
2016/day24/: day24.md  main.py
2016/day25/: main.py  (+1 more)
(+457 files in other folders)
